elastic-contabo/app.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: petclinic 
   
  labels: 
    app: petclinic 
    service: petclinic 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: petclinic 
  template: 
    metadata: 
      labels: 
        app: petclinic 
        service: petclinic 
    spec: 
      dnsPolicy: ClusterFirstWithHostNet 
      ###################### Shared volume and init container ##########################
      volumes: 
      - name: elastic-apm-agent 
        emptyDir: {} 
      containers: 
      - name: petclinic 
        image: eyalkoren/pet-clinic:without-agent
      ######################### Volume path and agent config ###########################
        volumeMounts: 
        - mountPath: /elastic/apm/agent 
          name: elastic-apm-agent 
---
apiVersion: v1 
kind: Service 
metadata: 
  name: petclinic 
   
  labels: 
    app: petclinic 
spec: 
  type: ClusterIP 
  ports: 
  - protocol: TCP 
    port: 8080 
    targetPort: 8080 
  selector: 
    service: petclinic
