elastic-contabo/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  ingressClassName: nginx 
  tls:
  rules:
  - host: kb-apm.saude.gov.br
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: elastic-kb-http
            port:
              number: 5601
